actualizacion de css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="src\index.css" />
     <link rel="stylesheet" href="src\leaflet-routing-machine.css" />
 
     <script src="src\services\leaflet-routing-machine.js"></script>
